--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							
 							<ul id="one">
 								<li>In Wexler's study participants in the involuntary condition were moved on a office chair.</li><br>
-								<li>This removed their sense of afference and proprioception.</li><br>
+								<li>This removed their sense of  <a target="_blank" href="https://en.wikipedia.org/wiki/Efference_copy">afference</a> and <a target="_blank" href="https://en.wikipedia.org/wiki/Proprioception">proprioception</a>.</li><br>
 								<li>This increased both the "bias" and also the "sigma".</li><br>
 								<li>"Sigma" is how sensitive participants were to the ball stimuli.</li><br>
 								<li>A higher "sigma" value indicates less sensitivity to the stimuli. Wexler's "sigma" values are displayed in figure D.</li>
