--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="slides">
 				<section>
 					<h1>Measuring perceptual stability</h1>
-					<h3>With vritual reality (VR)</h3>
+					<h3>With virtual reality (VR)</h3>
 					<p>
 						A project by Omar Faruk
 					</p>
